fix pay buttons on mobile

--- a/src/pages/DonationPage/DonationPage.module.css
+++ b/src/pages/DonationPage/DonationPage.module.css
@@ -19,7 +19,7 @@
   }
 
   .wide {
-    width: calc(100vw - 18px);
+    width: 100%;
     margin-top: 12px;
   }
 }
