--- a/src/pages/DonationPage/sections/PaymentComponent.module.css
+++ b/src/pages/DonationPage/sections/PaymentComponent.module.css
@@ -54,7 +54,7 @@
 @media (max-width: 1200px) {
   .paybuttoncontainer {
     flex-direction: column-reverse;
-    gap: 9px;
+    gap: 21px;
     align-items: center;
   }
 }
@@ -68,6 +68,7 @@
 
 @media (max-width: 1200px) {
   .paybuttons {
+    flex-direction: column;
     align-items: center;
   }
 }
@@ -87,7 +88,7 @@
 
 @media (max-width: 1200px) {
   .paybutton {
-    padding: 12px 15px 12px 18px;
+    width: 100%;
     font-size: 28px;
   }
 }
